--- a/index.html
+++ b/index.html
@@ -1,14 +1,27 @@
 ---
-layout: default
+layout: home
 ---
 
+<div id="home">
+
+<section id="intro">
+<div class="container">
 <div class="row">
 
-  <div class="col-lg-12 intro">
-    <h2>"The StartupBus was a life changing experience."</h2>
-    <p>John Smith was a finalist in the 2012 compeition in America, and has since become a co-founder of a startup based in NYC.</p>
-    <a href="" class="btn">Apply for The StartupBus</a>
+  <div class="col-lg-12">
+    <h2>Launch a Startup at 60 MPH</h2>
+    <p>Join our community and test your limits at the world’s most intense startup tournament.</p>
+    <a href="" class="btn btn-large btn-danger">Apply for The StartupBus</a>
   </div><!--/col-lg-12-->
+
+</div><!--/row-->
+</div><!--/container-->
+</section><!--/intro-->
+
+
+
+<div class="container">
+<div class="row">
 
   <div class="col-lg-3">
     <img src="">X
@@ -45,3 +58,6 @@ layout: default
   </div><!--/col-lg-9-->
 
 </div><!--/row-->
+</div><!--/container-->
+
+</div><!--/home-->
