cleaning up the look;

--- a/apply.html
+++ b/apply.html
@@ -4,4 +4,29 @@ layout: page
 
 <div class="row">
 
+  <div class="col-lg-12">
+    <h2>Apply</h2>
+  </div><!--/col-lg-12-->
+
+  <div class="col-lg-6">
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  </div><!--/col-lg-6-->
+
+  <div class="col-lg-6">
+    <div id="mc_embed_signup">
+      <form action="http://startupbus.us2.list-manage1.com/subscribe/post?u=7daf639b4fcc37252954187c0&amp;id=d72284805e" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+        <div class="form-group mc-field-group">
+          <label for="mce-EMAIL">Email Address</label>
+          <input type="email" value="" name="EMAIL" class="required email form-control" id="mce-EMAIL" placeholder="your@email.com">
+        </div><!--/form-group-->
+        <div id="mce-responses">
+          <div class="response" id="mce-error-response" style="display:none"></div>
+          <div class="response" id="mce-success-response" style="display:none"></div>
+        </div><!--/mce-responses-->
+        <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button btn btn-danger">
+      </form>
+    </div><!--/mc_embed_signup-->
+    <script src="/assets/js/mailchimp.js"></script>
+  </div><!--/col-lg-6-->
+
 </div><!--/row-->
