--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: home
 
   <div class="col-lg-12">
     <h2>Launch a Startup at 60 MPH</h2>
-    <p>Join our community and test your limits at the world’s most intense startup tournament.</p>
+    <p>Join our community and test your limits at the world's most intense startup tournament.</p>
     <a href="" class="btn btn-large btn-danger">Apply for The StartupBus</a>
   </div><!--/col-lg-12-->
 
@@ -23,39 +23,49 @@ layout: home
 <div class="container">
 <div class="row">
 
-  <div class="col-lg-3">
-    <img src="">X
-  </div><!--/col-lg-3-->
-
-  <div class="col-lg-9">
-    <h2>What is The StartupBus?</h2>
+  <div class="col-lg-6">
+    <h3>What is The StartupBus?</h3>
     <p>Founded in 2010, StartupBus is building an entrepreneurial ecosystem through unique experiences and inspirational connections. A community run organisation, the underlying vision to all activities is to empower the people that create change in the world and disrupt the status quo.</p>
-    <p><a href="">Read More</a> or <a href="">Apply</a></p>
-  </div><!--/col-lg-9-->
+  </div><!--/col-lg-6-->
 
-  <div class="col-lg-9">
-    <h2>Annual Competitions</h2>
+  <div class="col-lg-6">
+    <img src="/assets/img/bus.png">
+  </div><!--/col-lg-6-->
+
+  <div class="clearfix"></div><hr/>
+
+  <div class="col-lg-6">
+    <img src="/assets/img/comp.png">
+  </div><!--/col-lg-6-->
+
+  <div class="col-lg-6">
+    <h3>Annual Competitions</h3>
     <p>Every year across the world, we run a competition where you need to conceive, build and launch a startup on a bus travelling for 72 hours. It’s a a once in a life time adventure that will transform your life through the people you meet and the experiences you have in this week long expedition.</p>
     <p><a href="">America</a> or <a href="">Europe</a></p>
-  </div><!--/col-lg-9-->
+  </div><!--/col-lg-6-->
 
-  <div class="col-lg-3">
-    <img src="">X
-  </div><!--/col-lg-3-->
+  <div class="clearfix"></div><hr/>
 
-  <div class="col-lg-3">
-    <h2>Accelerate</h2>
+  <div class="col-lg-6">
+    <h3>Accelerate</h3>
     <p>Startups are known mostly for their products. But behind the scenes there is the raising of capital, building of teams, acquiring of customers, and scaling of operations that all startups need to do to succeed. Come to our workshops to learn how to build a business, the StartupBus way.</p>
-    <p><a href="">Read More</a></p>
-    <h4>Find an event near you.</h4>
-    <!-- Find Location -->
-  </div><!--/col-lg-3-->
+  </div><!--/col-lg-6-->
 
-  <div class="col-lg-9">
-    <h2>The Community</h2>
+  <div class="col-lg-6">
+    <img src="/assets/img/group.png">
+  </div><!--/col-lg-6-->
+
+  <div class="clearfix"></div><hr/>
+
+  <div class="col-lg-6">
+    <img src="/assets/img/people.png">
+  </div><!--/col-lg-6-->
+
+  <div class="col-lg-6">
+    <h3>The Community</h3>
     <p>StartupBus started as an experiment and has birthed an international community. An exclusive network of do’ers and thinkers that you can leverage for the rest of your life, united by the shared experience of StartupBus.</p>
-    <p>As we run the annual competition across two continents which serves as the initiation into the community, we look to grow into a unique type of institution that leaves a lasting legacy on the entrepreneurial ecosystem.</p>
-  </div><!--/col-lg-9-->
+    <!-- <p>As we run the annual competition across two continents which serves as the initiation into the community, we look to grow into a unique type of institution that leaves a lasting legacy on the entrepreneurial ecosystem.</p> -->
+  </div><!--/col-lg-6-->
 
 </div><!--/row-->
 </div><!--/container-->
