--- a/about.html
+++ b/about.html
@@ -6,11 +6,28 @@ layout: page
 
   <div class="col-lg-12">
     <h2>About The StartupBus</h2>
+  </div><!--/col-lg-12-->
+
+  <div class="col-lg-6">
     <p>StartupBus began life as a joke in Australia: a roadtrip starting in San Francisco with friends, but with the twist of launching a startup on arrival in Austin in time for the SxSW interactive conference. Somehow though, people thought Elias Bizannes (our founder and fearless leader) was actually serious. A few unexpected blog articles and many emails later, he was stuck with having to now make good on his pub night promise.</p>
     <p>A month before departure in March 2010, Elias hustled to find a bus with wifi, sponsors to cover the costs, and he also selected the original Buspreneurs. Those 25 people without realising it set the tone, culture, and rituals that hundreds of other people have now experienced.</p>
     <p>So transformative was the experience that the original buspreneurs formed a tight-knit community. And one by one, they would observe amongst themselves lives being changed: moving countries, changing jobs and going in new directions in life all because of this experience and the people they met.</p>
     <p>And so several months latter, the newly formed buspreneur community decided to do it again: this time, with six buses in March 2011. In December 2011, we launched in Europe with 20 buspreneurs building five products and a whole new community base in another continent.</p>
     <p>Entrepreneurship cannot be taught, but we believe it can be learned. StartupBus has evolved from an experiment to a sought-after competition, an international community of people, and a series of unique content and event productions that we hope will inspire the future innovators of the world. A world where these innovators can increase the quality of life for us all.</p>
-  </div><!--/col-lg-12-->
+  </div><!--/col-lg-6-->
+
+  <div class="col-lg-6">
+    <object id="flashObj" width="570" height="321" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=9,0,47,0">
+      <param name="movie" value="http://c.brightcove.com/services/viewer/federated_f9?isVid=1&isUI=1" />
+      <param name="bgcolor" value="#FFFFFF" />
+      <param name="flashVars" value="videoId=1673029679001&linkBaseURL=http%3A%2F%2Fbusiness.time.com%2F2012%2F06%2F05%2Fstartupbus-building-an-app-en-route-to-sxsw%2F&playerID=1917933886001&playerKey=AQ~~,AAAAABGEUMg~,hNlIXLTZFZn-NQOazMchMDWH0SI1hX7f&domain=embed&dynamicStreaming=true" />
+      <param name="base" value="http://admin.brightcove.com" />
+      <param name="seamlesstabbing" value="false" />
+      <param name="allowFullScreen" value="true" />
+      <param name="swLiveConnect" value="true" />
+      <param name="allowScriptAccess" value="always" />
+      <embed src="http://c.brightcove.com/services/viewer/federated_f9?isVid=1&isUI=1" bgcolor="#FFFFFF" flashVars="videoId=1673029679001&linkBaseURL=http%3A%2F%2Fbusiness.time.com%2F2012%2F06%2F05%2Fstartupbus-building-an-app-en-route-to-sxsw%2F&playerID=1917933886001&playerKey=AQ~~,AAAAABGEUMg~,hNlIXLTZFZn-NQOazMchMDWH0SI1hX7f&domain=embed&dynamicStreaming=true" base="http://admin.brightcove.com" name="flashObj" width="570" height="321" seamlesstabbing="false" type="application/x-shockwave-flash" allowFullScreen="true" allowScriptAccess="always" swLiveConnect="true" pluginspage="http://www.macromedia.com/shockwave/download/index.cgi?P1_Prod_Version=ShockwaveFlash"></embed>
+    </object>
+  </div><!--/col-lg-6-->
 
 </div><!--/row-->
