adding some images

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: home
   <div class="col-lg-12">
     <h2>Launch a Startup at 60 MPH</h2>
     <p>Join our community and test your limits at the world's most intense startup tournament.</p>
-    <a href="" class="btn btn-large btn-danger">Apply for The StartupBus</a>
+    <a href="/apply/" class="btn btn-large btn-danger">Apply for The StartupBus</a>
   </div><!--/col-lg-12-->
 
 </div><!--/row-->
