changing the name from team to crew

--- a/crew.html
+++ b/crew.html
@@ -5,7 +5,7 @@ layout: page
 <div class="row">
 
   <div class="col-lg-12">
-    <h2>The Team</h2>
+    <h2>The Crew</h2>
     <p>StartupBus is run by the community. A community that has been created by people that have participated in the annual competition. Alumni of the experience become “buspreneurs” and can become “producers” the following year, running all that is StartupBus. Some producers progress into director roles, that focus on driving strategic organisational functions under the leadership of the founder.</p>
     <p>Mitch Neff has been a director since August 2012. Previously, he was on the 2011 Miami bus, and was a conductor for the 2012 Stanford Bus.</p>
     <p>Elias Bizannes is the founder of StartupBus. The idea first came to him as a bar-side joke in 2009 and he’s been working on all things StartupBus since January 2010.</p>
